--- a/config/features/combos.dtsi
+++ b/config/features/combos.dtsi
@@ -1,14 +1,46 @@
-/ {
-  combos {
-        compatible = "zmk,combos";
+#define COMBO_TERM_FAST 18
+#define COMBO_TERM_SLOW 30
 
-        toggle_windows {
-            bindings = <&tog 1>;
-            key-positions = <52 55>;
-        };
-        toggle_gaming {
-            bindings = <&tog 2>;
-            key-positions = <0 11>;
-        };
-    };
-};
+#define COMBO_IDLE_FAST 150
+#define COMBO_IDLE_SLOW 50
+
+ZMK_COMBO(toggle_windows,   &tog 1,      LH1 RH1,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(toggle_gaming,    &tog 2,      LN5 RN5,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(esc,   &kp ESC,      LT3 LT2,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cut,   &kp LC(X),    LB3 LB1,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,  &kp LC(INS),  LB3 LB2,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste, &kp LS(INS),  LB2 LB1,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(bspc,  &kp BSPC,     RT1 RT2,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(del,   &kp DEL,      RT2 RT3,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(lt,    &kp LT,       RM1 RM2,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(gt,    &kp GT,       RM2 RM3,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(lbkt,  &kp LBKT,     RB1 RB2,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rbkt,  &kp RBKT,     RB2 RB3,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(lbrc,  &kp LBRC,     RB1 RB2,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(rbrc,  &kp RBRC,     RB2 RB3,     MACOS WINDOWS, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Vertical combos - left hand */          
+ZMK_COMBO(at,    &kp AT,       LT3 LM3,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(hash,  &kp HASH,     LT2 LM2,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(dllr,  &kp DLLR,     LT1 LM1,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(prcnt, &kp PRCNT,    LT0 LM0,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(grave, &kp GRAVE,    LM3 LB3,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(bslh,  &kp BSLH,     LM2 LB2,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(equal, &kp EQUAL,    LM1 LB1,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tilde, &kp TILDE,    LM0 LB0,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+/* Vertical combos - right hand */
+ZMK_COMBO(caret, &kp CARET,    RT0 RM0,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(plus,  &kp PLUS,     RT1 RM1,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(star,  &kp STAR,     RT2 RM2,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(amps,  &kp AMPS,     RT3 RM3,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+
+ZMK_COMBO(under, &kp UNDER,    RM0 RB0,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(minus, &kp MINUS,    RM1 RB1,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(fslh,  &kp FSLH,     RM2 RB2,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,  &kp PIPE,     RM3 RB3,     MACOS WINDOWS, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
