--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,22 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: urob
       url-base: https://github.com/urob
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
+    - name: gpeye
+      url-base: https://github.com/GPeye
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
+    - name: kevinpastor
+      url-base: https://github.com/kevinpastor
+    - name: m165437
+      url-base: https://github.com/M165437
+    - name: s6t
+      url-base: https://github.com/s6t
+    - name: infely
+      url-base: https://github.com/infely
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -14,6 +30,24 @@ manifest:
       revision: main
     - name: zmk-unicode
       remote: urob
+      revision: main
+    - name: hammerbeam-slideshow
+      remote: gpeye
+      revision: main
+    - name: zmk-nice-oled
+      remote: mctechnology17
+      revision: main
+    - name: nice-view-elemental
+      remote: kevinpastor
+      revision: main
+    - name: nice-view-gem
+      remote: m165437
+      revision: main
+    - name: zmk-shield-nice-view-cats
+      remote: s6t
+      revision: main
+    - name: nice-view-battery
+      remote: infely
       revision: main
   self:
     path: config
